scalability/wordpress/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
      - name: data
        hostPath:
          path: /data
          type: DirectoryOrCreate
      containers:
      - image: wordpress:6.1.1-php8.2
        name: wordpress
        resources: 
          limits:
            cpu: 50m
            memory: 100Mi
        volumeMounts:
        - name: data
          mountPath: /var/www/html
